syntax = "proto3";

package auth.v1.response;

option php_namespace = "GRPC\\Services\\Auth\\v1";
option php_metadata_namespace = "GRPC\\ProtobufMetadata\\Auth\\v1";

import "auth/v1/message.proto";
import "users/v1/message.proto";

message LoginResponse {
  auth.v1.dto.Token token = 1;
}

message RegisterResponse {
  auth.v1.dto.Token token = 1;
}

message MeResponse {
  users.v1.dto.User user = 1;
}